# 3d-player

./: .gitignore  3d-player.ps1  CLAUDE.md  CMakeLists.txt  README.md  build-3d-player.ps1  build.bat  build.ps1  test-all.ps1  test.ps1
.cursor/rules/: readme.mdc
.github/instructions/: default.instructions.md
3dpy/: CLAUDE.md  PlayerViewModel.py  mkv-player.py  pyproject.toml  subtitle_parser.py  subtitle_widget.py  video_widget_graphics.py  video_widget_with_subtitle.py
3dpy/src/: mkv-player.py  test_gpu.py
3dpy/tests/: __init__.py  conftest.py  test_actions.py  test_computed_values.py  test_initialization.py  test_integration.py  test_state_updates.py  test_subtitle.py  test_utilities.py
cmake/: AddressSanitizer.cmake  FindCUDA.cmake  FindFFmpeg.cmake  FindOpenVINO.cmake
intel/: .gitignore  3d-player.ps1  CMakeLists.txt  README.md  audio-only.ps1  test-all.ps1  test.ps1
intel/src/: audio_decoder.cpp  audio_decoder.h  audio_format_converter.cpp  audio_format_converter.h  audio_only_player.cpp  audio_player.cpp  audio_player.h  audio_video_player.cpp  audio_video_player.h  fullscreen_quad.hlsl  hw_video_decoder.cpp  hw_video_decoder.h  main.cpp  mkv_stream_reader.cpp  mkv_stream_reader.h  rgb_video_decoder.cpp  rgb_video_decoder.h  ring_buffer.cpp  ring_buffer.h  video_player.cpp  video_player.h
intel/test_data/: sample_with_audio.mkv
intel/tests/: test_audio_decoder.cpp  test_audio_player.cpp  test_audio_video_player.cpp  test_hw_video_decoder.cpp  test_main.cpp  test_mkv_stream_reader.cpp  test_rgb_video_decoder.cpp  test_ring_buffer.cpp  test_ring_buffer_issues.cpp  test_video_player.cpp
nvidia/: CMakeLists.txt  LICENSE  stereo_video_decoder_cli.ps1  test-all.ps1
nvidia/cmake/: FindTensorRT.cmake
nvidia/shaders/: bchw_to_rgba.hlsl
nvidia/src/: audio_decoder.h  audio_player.cpp  audio_player.h  audio_video_player.cpp  d3d_stereo_video_decoder.cpp  d3d_stereo_video_decoder.h  float_rgb_video_decoder.cpp  hw_video_decoder.cpp  main.cpp  mkv_stream_reader.cpp  rgb_video_decoder.cpp  stereo_video_decoder.h  tensorrt_utils.cpp  video_player.h
nvidia/tests/: test_audio_decoder.cpp  test_float_rgb_video_decoder.cpp  test_mkv_stream_reader.cpp  test_rgb_video_decoder.cpp  test_stereo_video_decoder.cpp  test_tensorrt.cpp
src/: audio_decoder.cpp  audio_player.cpp  audio_video_player.cpp  audio_video_player.h  d3d_stereo_video_decoder.cpp  d3d_stereo_video_decoder.h  float_rgb_video_decoder.cpp  float_rgb_video_decoder.h  hw_video_decoder.cpp  hw_video_decoder.h  main.cpp  mkv_stream_reader.cpp  mkv_stream_reader.h  rgb_video_decoder.cpp  rgb_video_decoder.h  stereo_video_decoder.cpp  stereo_video_decoder.h  stereo_video_decoder_cli.cpp  tensorrt_utils.cpp  tensorrt_utils.h  video_player.cpp  video_player.h
test_data/: sample_hw.mkv  sample_with_audio.mkv  simple_add.onnx
tests/: test_audio_decoder.cpp  test_audio_player.cpp  test_audio_video_player.cpp  test_d3d11_cuda_interop.cpp  test_d3d_stereo_video_decoder.cpp  test_float_rgb_video_decoder.cpp  test_hw_video_decoder.cpp  test_mkv_stream_reader.cpp  test_openvino.cpp  test_rgb_video_decoder.cpp  test_stereo_video_decoder.cpp  test_tensorrt.cpp  test_video_player.cpp
